# dsan6000-final-project

./: .gitignore  LICENSE  README.md  project_eda.html  pyproject.toml
code/: project_eda.ipynb  project_starter_script.py  pyproject.toml  stock_price_download.py  stock_price_downloader.py
code/nlp/: nlp_cost_of_living.ipynb  text_emb.ipynb
data/processed/: submissions_top20_subreddits.csv  summary_engagement_demo_vs_non.csv  summary_monthly_inflation.csv  summary_monthly_topic_mix.csv  summary_post_length_distribution.csv  summary_top15_subreddits_cost_of_living.csv  summary_top_demo_col_subreddits.csv
data/raw/: AAPL_stock_prices_2022-01-01_to_2023-03-31.csv  MSFT_stock_prices_2022-01-01_to_2023-03-31.csv  NVDA_stock_prices_2022-01-01_to_2023-03-31.csv  SPY_stock_prices_2022-01-01_to_2023-03-31.csv  combined_stocks_2022-01-01_to_2023-03-31.csv
