[project]
name = "dsan6000-final-project"
version = "0.1.0"
description = "Reddit & Cost of Living Crisis – DSAN 6000 Final Project"
requires-python = ">=3.10"

dependencies = [
    "pyspark>=3.4.0,<3.5.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pyarrow>=12.0.0",
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
    "yfinance>=0.2.0"
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "*.ipynb",
    "*.md",
    "*.csv",
    "*.txt"
]
