[project]
name = "lab-spark-nlp"
version = "0.1.0"
description = "Spark NLP lab using distributed Spark cluster on AWS EC2"
requires-python = ">=3.10"
dependencies = [
    "pyspark>=3.4.0,<3.5.0",
    "spark-nlp>=5.1.3",
    "boto3>=1.28.0",
    "pandas>=2.0.0",
    "polars>=0.19.0",
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
    "awscli>=1.42.35",
    "seaborn>=0.12.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pyarrow>=21.0.0",
    "s3fs>=0.4.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "*.ipynb",
    "*.md",
    "*.csv",
    "*.txt",
]